--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ p {
 #header .nav-list ul li:hover a {
 	color: crimson;
 }
-#header .hamburger {
+#header .menu {
 	height: 60px;
 	width: 60px;
 	display: inline-block;
@@ -157,7 +157,7 @@ p {
 	transform: scale(0.8);
 	margin-right: 20px;
 }
-#header .hamburger:after {
+#header .menu:after {
 	position: absolute;
 	content: '';
 	height: 100%;
@@ -166,15 +166,15 @@ p {
 	border: 3px solid white;
 	animation: hamburger_puls 1s ease infinite;
 }
-#header .hamburger .bar {
+#header .menu .bar {
 	height: 2px;
 	width: 30px;
 	position: relative;
 	background-color: white;
 	z-index: -1;
 }
-#header .hamburger .bar::after,
-#header .hamburger .bar::before {
+#header .menu .bar::after,
+#header .menu .bar::before {
 	content: '';
 	position: absolute;
 	height: 100%;
@@ -184,29 +184,29 @@ p {
 	transition: 0.3s ease;
 	transition-property: top, bottom;
 }
-#header .hamburger .bar::after {
+#header .menu .bar::after {
 	top: 8px;
 }
-#header .hamburger .bar::before {
+#header .menu .bar::before {
 	bottom: 8px;
 }
-#header .hamburger.active .bar::before {
+#header .menu.active .bar::before {
 	bottom: 0;
 }
-#header .hamburger.active .bar::after {
+#header .menu.active .bar::after {
 	top: 0;
 }
 /* End Header section */
 
-/* Hero Section */
-#hero {
+/* Home Section */
+#home {
 	background-image: url(./img/hero-bg.png);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
 	z-index: 1;
 }
-#hero::after {
+#home::after {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -217,13 +217,13 @@ p {
 	opacity: 0.7;
 	z-index: -1;
 }
-#hero .hero {
+#home .home {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 50px;
 	justify-content: flex-start;
 }
-#hero h1 {
+#home h1 {
 	display: block;
 	width: fit-content;
 	font-size: 4rem;
@@ -232,17 +232,17 @@ p {
 	animation: text_reveal 0.5s ease forwards;
 	animation-delay: 1s;
 }
-#hero h1:nth-child(1) {
+#home h1:nth-child(1) {
 	animation-delay: 1s;
 }
-#hero h1:nth-child(2) {
+#home h1:nth-child(2) {
 	animation-delay: 2s;
 }
-#hero h1:nth-child(3) {
+#home h1:nth-child(3) {
 	animation: text_reveal_name 0.5s ease forwards;
 	animation-delay: 3s;
 }
-#hero h1 span {
+#home h1 span {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -252,17 +252,17 @@ p {
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
-#hero h1:nth-child(1) span {
+#home h1:nth-child(1) span {
 	animation-delay: 0.5s;
 }
-#hero h1:nth-child(2) span {
+#home h1:nth-child(2) span {
 	animation-delay: 1.5s;
 }
-#hero h1:nth-child(3) span {
+#home h1:nth-child(3) span {
 	animation-delay: 2.5s;
 }
 
-/* End Hero Section */
+/* End Home Section */
 
 /* Services Section */
 #services .services {
