--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ p {
 	border: 3px solid white;
 	border-radius: 50%;
 	position: relative;
+	left: 30%
 	display: flex;
 	align-items: center;
 	justify-content: center;
