--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ p {
 	height: 100%;
 	width: 100%;
 	border-radius: 50%;
-	border: 3px solid black;
+	border: 3px solid white;
 	animation: bounce 1s infinite alternate;
 }
 #header .menu .bar {
