--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Home Section */
 #home {
-	background-image: url(./img/hero-bg.png);
+	background-image: url(https://i.ibb.co/WkRY6rr/1.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
