--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ p {
 	flex-direction: column;
 	padding: 30px;
 	border-radius: 10px;
-	background-image: url(https://raw.githubusercontent.com/printbr/daoplay/main/img/1.jpg);
+	background-image: url(./img/img-1.png);
 	background-size: cover;
 	margin: 10px 5%;
 	position: relative;
