--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ p {
 /* Home Section */
 #home {
 	background-image: url(./img/1.jpg);
-	background-size: cover;
+	background-size: auto;
 	background-position: top center;
 	position: relative;
 	z-index: 1;
@@ -211,14 +211,14 @@ p {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 50%;
-	width: 50%;
+	height: 100%;
+	width: 100%;
 	background-color: black;
 	opacity: 0.7;
 	z-index: -1;
 }
 #home .home {
-	max-width: 800px;
+	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 50px;
 	justify-content: flex-start;
