--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p {
 	text-align: center;
 }
 .section-title span {
-	color: Black;
+	color: white;
 }
 
 .cta {
@@ -68,7 +68,7 @@ p {
 	color: white;
 }
 .brand h1 span {
-	color: black;
+	color: white;
 }
 
 /* Header section */
