--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@ p {
 /* Home Section */
 #home {
 	background-image: url(./img/1.jpg);
+	height: 800px;
+	width: 250px;
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -218,7 +220,7 @@ p {
 	z-index: -1;
 }
 #home .home {
-	max-width: 600px;
+	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 50px;
 	justify-content: flex-start;
