--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ p {
 	height: 250px;
 	width: 800px;
 	background-size: cover;
-	background-position: top center;
+	background-position: center;
 	position: relative;
 	z-index: 1;
 }
@@ -215,7 +215,7 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background-color: white;
+	background-color: black;
 	opacity: 0.7;
 	z-index: -1;
 }
