--- a/style.css
+++ b/style.css
@@ -201,10 +201,8 @@ p {
 /* Home Section */
 #home {
 	background-image: url(./img/1.jpg);
-	height: 400px;
-	width: 1000px;
 	background-size: cover;
-	background-position: center,center;
+	background-position: center;
 	position: center;
 	z-index: 1;
 }
