--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ p {
 	height: 60px;
 	width: 60px;
 	display: inline-block;
-	border: 3px solid white;
+	border: 3px solid black;
 	border-radius: 50%;
 	position: relative;
 	display: flex;
