--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
 .cta {
 	display: inline-block;
 	padding: 10px 30px;
-	color: back;
+	color: crimson;
 	background-color: transparent;
 	border: 2px solid crimson;
 	font-size: 2rem;
