--- a/style.css
+++ b/style.css
@@ -193,8 +193,8 @@ p {
 #home {
 	background-image: url(./img/1.jpg);
 	background-size: cover;
-	background-position: top,center;
-	position: center;
+	background-position: top center;
+	position: relative;
 	z-index: 1;
 }
 #home::after {
@@ -205,7 +205,7 @@ p {
 	height: 100%;
 	width: 100%;
 	background-color: black;
-	opacity: 0.7;
+	opacity: 1.5;
 	z-index: -1;
 }
 #home .home {
