--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ p {
 
 /* Home Section */
 #home {
-	background-image: url(./img/1.jpg);
+	background-image: url(./img/back.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
