--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ p {
 	left: 0;
 	height: 100%;
 	width: 0;
-	background-color: crimson;
+	background-color: white;
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
