--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p {
 	padding: 10px 30px;
 	color: white;
 	background-color: transparent;
-	border: 2px solid crimson;
+	border: 2px solid transparent;
 	font-size: 2rem;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
